# filews

./: docker-compose.yml  dockerfile  index.html  nginx.conf  pyproject.toml  readme.md  requirements.txt  server.py
